--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
             <!-- About-->
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
-                    <h1 class="mb-0">
-                        Gibeon 
+                    <h1 class="mb-0" >
+                        <span class="text-warning">Gibeon</span>
                         <span class="text-primary">Yalak</span>
                     </h1>
                     <div class="subheading mb-5">
                         Perumnas 3 Waena 
                         <a href="mailto:name@email.com">yalakdimas@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am a biginner Developer of Sacode and i'm student of University of Uncen major Enginer.</p>
+                    <p class="lead mb-5">I am a biginner of Developer in Sacode and I'm student of University of Uncen.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://github.com/dimasyalak" ><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
@@ -99,11 +99,11 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
+                            <h3 class="mb-0">Web Design Internet</h3>
                             <div class="subheading mb-3">Shout! Media Productions</div>
                             <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2022 - June 2022</span></div>
                     </div>
                 </div>
             </section>
@@ -114,20 +114,18 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">University Cenderasih (Uncen)</h3>
+                            <div class="subheading mb-3">Enginnering</div>
+                            <div>Computer- Web Developer and English</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2020 - May 2022</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">SMK Negeri 1 Sentani </h3>
+                            <div class="subheading mb-3">Wellding</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2017 - May 2020 </span></div>
                     </div>
                 </div>
             </section>
@@ -138,7 +136,7 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-facebook"></i></li>
                         <li class="list-inline-item"><i class="fa-brands fa-bootstrap"></i></li>
                         <li class="list-inline-item"><i class="fab fa-github"></i></li>
                         
